@@ -13,9 +13,14 @@ import(ggplot2)
 import(grDevices)
 import(gridExtra)
 import(methods)
-import(scales)
 import(stats)
 import(utils)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme)
 importFrom(grid,gpar)
 importFrom(grid,grid.draw)
 importFrom(grid,grid.layout)
