@@ -4,5 +4,14 @@
 ## usethis namespace: start
 #' @importFrom plyr count
 #' @importFrom rlang .data
+#' @import gridExtra
+#' @import ggplot2
+#' @import utils
+#' @import stats
+#' @import methods
+#' @import grDevices
+#' @importFrom grid grid.newpage pushViewport viewport grid.layout grid.draw popViewport
+#' @importFrom grid legendGrob gpar
+#' @importFrom ggplot2 aes ggplot geom_histogram theme element_blank element_text
 ## usethis namespace: end
 NULL
