@@ -95,8 +95,8 @@ Install the latest released version from CRAN
 install.packages("UpSetR")
 ```
 
-Download the latest development code of UpSetR from GitHub using [devtools](https://cran.r-project.org/package=devtools) with
+Download the latest development code of UpSetR from GitHub using [remotes](https://cran.r-project.org/package=remotes) with
 
 ```R
-devtools::install_github("hms-dbmi/UpSetR")
+remotes::install_github("hms-dbmi/UpSetR")
 ```
